--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "install": "cd client && npm install",
-    "client": "cd client && npm run start",
-    "build": "cd client && npm run build",
+    "install": "cd public && npm install",
+    "client": "cd public && npm run start",
+    "build": "cd public && npm run build",
     "heroku-postbuild": "npm run build"
 
   },
