--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-{
+{"homepage": "https://github.com/Maxguojiaqi/React-Portfolio",
   "name": "portfolio",
-  "homepage": "https://github.com/Maxguojiaqi/React-Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
