--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "http://Maxguojiaqi.github.io/React-Portfolio",
+  "homepage" :"https://maxguojiaqi.github.io/React-Portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
